# ctxvault

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: README.md  beir_benchmark.py  coir_benchmark.py  evaluate.py  requirements.txt  utils.py
benchmarks/dataset/: queries.json
benchmarks/dataset/legal/: legal_01_data_retention.txt  legal_02_access_control_policy.txt  legal_03_vendor_liability.txt  legal_04_confidential_record_handling.txt  legal_05_compliance_documentation.txt  legal_06_authorized_personnel.txt  legal_07_record_archival_obligations.txt  legal_08_internal_audit_trails.txt  legal_09_policy_exception_management.txt  legal_10_information_governance.txt  legal_11_data_breach_notification.txt  legal_12_intellectual_property_agreements.txt  legal_13_regulatory_compliance_frameworks.txt
benchmarks/dataset/medicine/: med_01_memory_decline.txt  med_02_patient_monitoring.txt  med_03_clinical_history.txt  med_04_medication_adherence.txt  med_05_cognitive_assessment.txt  med_06_patient_record_management.txt  med_07_symptom_progression.txt  med_08_follow_up_planning.txt  med_09_neurological_observation.txt  med_10_care_documentation.txt  med_11_diabetes_management.txt  med_12_cardiac_rehabilitation.txt  med_13_antibiotic_stewardship.txt
benchmarks/dataset/technology/: tech_01_vector_indexing.txt  tech_02_rag_latency.txt  tech_03_token_budgeting.txt  tech_04_context_window_limits.txt  tech_05_agent_memory_architecture.txt  tech_06_embedding_model_selection.txt  tech_07_access_control_in_ai_systems.txt  tech_08_shared_vs_isolated_indexes.txt  tech_09_semantic_search_precision.txt  tech_10_inference_pipeline_monitoring.txt  tech_11_retrieval_pipeline_design.txt  tech_12_embedding_fine_tuning.txt  tech_13_hybrid_search_architectures.txt
benchmarks/internal/: compare_strategies.py
benchmarks/retrieval/: beir_vs_alternatives.py  coir_vs_alternatives.py  requirements.txt
benchmarks/runners/: chromadb_runner.py  ctxvault_runner.py  mem0_runner.py
docs/: index.html
examples/01-simple-rag/: README.md  app.py
examples/01-simple-rag/.ctxvault/: config.json
examples/02-multi-agent-isolation/: README.md  app.py
examples/02-multi-agent-isolation/.ctxvault/: config.json
examples/03-persistent-memory/: README.md  app.py
examples/03-persistent-memory/.ctxvault/: config.json
examples/04-composed-topology/: README.md  app.py  requirements.txt  setup.py
examples/04-composed-topology/.ctxvault/: config.json
examples/05-procedural-memory-agent/: README.md  app.py  requirements.txt
examples/05-procedural-memory-agent/.ctxvault/: config.json
tests/: conftest.py  test_api.py  test_cli.py  test_core.py
(+39 files in other folders)
