[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxvault"
version = "0.4.0"
description = "Local semantic memory infrastructure for AI agents. Index documents, let agents write and query knowledge autonomously via MCP, HTTP API, or CLI. Multi-vault architecture, zero cloud dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Filippo Venturini", email = "filippoventurini00@gmail.com"}
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "semantic-search",
    "embeddings",
    "vector-database",
    "chroma",
    "llm",
    "ai",
    "knowledge-base",
    "document-search",
    "local-ai",
    "developer-tools",
    "cli",
    "fastapi",
    "mcp",
    "model-context-protocol",
    "agent-memory",
    "persistent-memory",
    "claude",
    "multi-agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
    "Environment :: Console",
    "Framework :: FastAPI"
]
dependencies = [
    "typer>=0.20.0",
    "chromadb>=1.3.0",
    "sentence-transformers>=5.0.0",
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.2.0",
    "pydantic>=2.12.0",
    "rich>=14.0.0",
    "pypdf>=6.0.0",
    "python-docx>=1.0.0",
    "markdown>=3.0.0",
    "strip-tags>=0.5.0",
    "mcp>=1.26.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
    "pytest-anyio>=0.0.0",
    "black>=25.0.0",
    "isort>=7.0.0",
    "pre-commit>=3.5.0",
    "build>=1.0.0",
    "twine>=5.0.0"
]

[project.scripts]
ctxvault = "ctxvault.cli.app:main"
ctxvault-mcp = "ctxvault.mcp.server:main"

[project.urls]
Homepage = "https://github.com/Filippo-Venturini/ctxvault"
Repository = "https://github.com/Filippo-Venturini/ctxvault"
Issues = "https://github.com/Filippo-Venturini/ctxvault/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ctxvault*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]